fix line spacing

--- a/app/styles/components/OneProject.css
+++ b/app/styles/components/OneProject.css
@@ -13,7 +13,7 @@
   font-family: 'Merriweather', serif;
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
-  margin-bottom: 3px;
+  margin-bottom: 6px;
 }
 
 .one-project .title {
